@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -16,25 +16,24 @@
 
 package org.qubership.automation.itf.core.hibernate.spring.managers.executor;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
-
-import jakarta.annotation.PostConstruct;
 
 import org.qubership.automation.itf.core.hibernate.spring.managers.base.AbstractObjectManager;
 import org.qubership.automation.itf.core.hibernate.spring.repositories.executor.CounterRepository;
 import org.qubership.automation.itf.core.model.common.Storable;
 import org.qubership.automation.itf.core.model.counter.Counter;
 import org.qubership.automation.itf.core.model.counter.CounterImpl;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import jakarta.annotation.PostConstruct;
 
 @Service
 public class CounterObjectManager extends AbstractObjectManager<Counter, Counter> {
 
     private Map<String, Class<? extends Counter>> subclasses;
 
-    @Autowired
     public CounterObjectManager(CounterRepository repository) {
         super(Counter.class, repository);
     }
@@ -47,8 +46,9 @@ public class CounterObjectManager extends AbstractObjectManager<Counter, Counter
         }
         Counter result;
         try {
-            result = counterClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            result = counterClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException
+                 | InvocationTargetException e) {
             throw new RuntimeException("Cannot create counter of type " + type + " with class "
                     + counterClass.getCanonicalName(), e);
         }
@@ -64,7 +64,7 @@ public class CounterObjectManager extends AbstractObjectManager<Counter, Counter
 
     @PostConstruct
     protected void init() {
-        subclasses = new HashMap<String, Class<? extends Counter>>() {
+        subclasses = new HashMap<>() {
             {
                 put(CounterImpl.class.getName(), CounterImpl.class);
             }
