@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -16,11 +16,10 @@
 
 package org.qubership.automation.itf.core.hibernate.spring.managers.reports;
 
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigInteger;
 import java.util.HashMap;
 import java.util.Map;
-
-import jakarta.annotation.PostConstruct;
 
 import org.qubership.automation.itf.core.hibernate.spring.managers.base.AbstractObjectManager;
 import org.qubership.automation.itf.core.hibernate.spring.managers.base.InstanceManager;
@@ -32,9 +31,9 @@ import org.qubership.automation.itf.core.model.jpa.instance.chain.CallChainInsta
 import org.qubership.automation.itf.core.model.jpa.instance.step.StepInstance;
 import org.qubership.automation.itf.core.util.db.TxExecutor;
 import org.qubership.automation.itf.core.util.generator.id.UniqueIdGenerator;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import jakarta.annotation.PostConstruct;
 
 @Service
 public class AbstractInstanceObjectManager<T extends AbstractInstance> extends AbstractObjectManager<AbstractInstance,
@@ -42,7 +41,6 @@ public class AbstractInstanceObjectManager<T extends AbstractInstance> extends A
 
     private Map<String, Class<? extends AbstractInstance>> subclasses;
 
-    @Autowired
     public AbstractInstanceObjectManager(AbstractInstanceRepository repository) {
         super(AbstractInstance.class, repository);
     }
@@ -68,11 +66,12 @@ public class AbstractInstanceObjectManager<T extends AbstractInstance> extends A
         }
         AbstractInstance result;
         try {
-            result = instanceClass.newInstance();
+            result = instanceClass.getDeclaredConstructor().newInstance();
             if (setId) {
                 result.setID((BigInteger) UniqueIdGenerator.generate());
             }
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException
+                 | InvocationTargetException e) {
             throw new RuntimeException("Cannot create instance of type " + type + " with class "
                     + instanceClass.getCanonicalName(), e);
         }
@@ -82,7 +81,7 @@ public class AbstractInstanceObjectManager<T extends AbstractInstance> extends A
 
     @PostConstruct
     protected void init() {
-        subclasses = new HashMap<String, Class<? extends AbstractInstance>>() {
+        subclasses = new HashMap<>() {
             {
                 put(CallChainInstance.class.getSimpleName(), CallChainInstance.class);
                 put(SituationInstance.class.getSimpleName(), SituationInstance.class);
