@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -164,7 +164,7 @@ public class Config extends AbstractConfig {
     }
 
     private static String constructRunningUrl() {
-        return String.format("%s://%s:%s/", "http", config.getRunningHostname(), config.getRunningPort());
+        return "%s://%s:%s/".formatted("http", config.getRunningHostname(), config.getRunningPort());
     }
 
     private static String determineHostname() {
